--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "angular": "~1.3.8",
     "angular-route": "~1.3.8",
+    "angular-resource": "~1.3.8",
     "angular-mocks": "~1.3.8",
     "skeleton-css": "^2.0.4",
     "ocanvas": "http://cdnjs.cloudflare.com/ajax/libs/ocanvas/2.8.1/ocanvas.js",
