--- a/package.json
+++ b/package.json
@@ -18,7 +18,13 @@
     "karma-firefox-launcher": "^0.1.7",
     "karma-jasmine": "^0.3.6",
     "karma-junit-reporter": "^0.2.2",
-    "shelljs": "^0.2.6"
+    "shelljs": "^0.2.6",
+    "gulp": "^3.9.1",
+    "gulp-clean": "^0.3.2",
+    "gulp-concat": "^2.6.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-clean-css": "^2.0.12",
+    "gulp-replace": "^0.5.4"
   },
   "scripts": {
     "postinstall": "bower install --config.interactive=false",
@@ -26,6 +32,7 @@
     "start": "http-server -a localhost -p 8000",
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
-    "test-single-run": "karma start karma.conf.js  --single-run"
+    "test-single-run": "karma start karma.conf.js  --single-run",
+    "deploy": "npm install; gulp customer"
   }
 }
