--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "gulp-concat": "^2.6.0",
     "gulp-uglify": "^2.0.0",
     "gulp-clean-css": "^2.0.12",
-    "gulp-replace": "^0.5.4"
+    "gulp-replace": "^0.5.4",
+    "gulp-rename": "^1.2.2"
   },
   "scripts": {
     "postinstall": "bower install --config.interactive=false",
