--- a/bower.json
+++ b/bower.json
@@ -10,6 +10,8 @@
     "angular-route": "~1.3.8",
     "angular-resource": "~1.3.8",
     "angular-mocks": "~1.3.8",
+    "angular-translate": "~2.12.1",
+    "angular-translate-loader-static-files": "~2.12.1",
     "skeleton-css": "^2.0.4",
     "ocanvas": "http://cdnjs.cloudflare.com/ajax/libs/ocanvas/2.8.1/ocanvas.js",
     "underscore": "^1.8.3"
