Change expiration time handling, add braintree-web as dependency

--- a/bower.json
+++ b/bower.json
@@ -14,6 +14,7 @@
     "angular-translate-loader-static-files": "~2.12.1",
     "skeleton-css": "^2.0.4",
     "ocanvas": "http://cdnjs.cloudflare.com/ajax/libs/ocanvas/2.8.1/ocanvas.js",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "braintree-web": "^2.30.0"
   }
 }
