Install latest Firefox version via addon

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,5 +14,6 @@ script:
   - codeclimate-test-reporter < coverage/*/lcov.info
 
 addons:
+    firefox: latest
     code_climate:
         repo_token: 65e8dbb60c4122ae34a35bc6d312a3d0d16984cbf78e6fc8267c7e52f82d40bc
