--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,10 @@ node_js:
 
 sudo: false
 
-install:
-  - export DISPLAY=:99.0
-  - sh -e /etc/init.d/xvfb start
-
 before_script:
-  - npm install
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+  - sleep 3 # give xvfb some time to start
 
 script:
   - node_modules/.bin/karma start karma.conf.js --no-auto-watch --single-run --browsers=Firefox
