--- a/.travis.yml
+++ b/.travis.yml
@@ -4,13 +4,19 @@ node_js:
 
 sudo: false
 
+addons:
+  chrome: stable
+
+before_install:
+  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+
 before_script:
   - export DISPLAY=:99.0
   - sh -e /etc/init.d/xvfb start
   - sleep 1 # give server time to start
 
 script:
-  - node_modules/.bin/karma start karma.conf.js --no-auto-watch --single-run --browsers=Firefox
+  - node_modules/.bin/karma start karma.conf.js --no-auto-watch --single-run --browsers=Chrome
   - codeclimate-test-reporter < coverage/*/lcov.info
 
 addons:
