--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,7 @@ node_js:
 sudo: false
 
 addons:
-  chrome: stable
-
-before_install:
-  - google-chrome-stable --headless --disable-gpu --remote-debugging-port=9222 http://localhost &
+  firefox: latest
 
 before_script:
   - export DISPLAY=:99.0
@@ -16,7 +13,7 @@ before_script:
   - sleep 1 # give server time to start
 
 script:
-  - node_modules/.bin/karma start karma.conf.js --no-auto-watch --single-run --browsers=Chrome
+  - node_modules/.bin/karma start karma.conf.js --no-auto-watch --single-run --browsers=Firefox
   - codeclimate-test-reporter < coverage/*/lcov.info
 
 addons:
