--- a/package.json
+++ b/package.json
@@ -35,6 +35,6 @@
     "pretest": "npm install",
     "test": "karma start karma.conf.js",
     "test-single-run": "karma start karma.conf.js  --single-run",
-    "deploy": "npm install; gulp zip"
+    "build": "npm install; gulp zip"
   }
 }
